deployment/cicd/kustomize/overlays/dev/deployment-bill-service-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bill-service

spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: bill-service
        image: acrdigitalgarage01.azurecr.io/phonebill/bill-service:dev-latest
        resources:
          requests:
            cpu: 256m
            memory: 256Mi
          limits:
            cpu: 1024m
            memory: 1024Mi
