deployment/cicd/kustomize/overlays/dev/deployment-kos-mock-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kos-mock
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: kos-mock
        resources:
          requests:
            cpu: 256m
            memory: 256Mi
          limits:
            cpu: 1024m
            memory: 1024Mi
