deployment/cicd/kustomize/overlays/dev/deployment-product-service-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service

spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: product-service
        image: acrdigitalgarage01.azurecr.io/phonebill/product-service:dev-latest
        resources:
          requests:
            cpu: 256m
            memory: 256Mi
          limits:
            cpu: 1024m
            memory: 1024Mi
