deployment/cicd/kustomize/overlays/dev/deployment-user-service-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: user-service
        resources:
          requests:
            memory: "256Mi"
            cpu: "256m"
          limits:
            memory: "1024Mi"
            cpu: "1024m"
